apps/creator/src-tauri/errors_utf8.txt
    Checking creator v0.1.0 (E:\QuizForce\apps\creator\src-tauri)
error[E0425]: cannot find type `Value` in this scope
   --> src\commands\quiz_commands.rs:288:43
    |
288 | pub async fn save_quiz_object_to_db(quiz: Value, db_pool: &sqlx::SqlitePool) -> Result<String, AppError> {
    |                                           ^^^^^ not found in this scope
    |
help: consider importing one of these items
    |
  1 + use serde_json::Value;
    |
  1 + use sqlx::Value;
    |

warning: unused import: `sqlx::Row`
 --> src\commands\student_commands.rs:6:5
  |
6 | use sqlx::Row;
  |     ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `chrono::Utc`
 --> src\commands\student_commands.rs:7:5
  |
7 | use chrono::Utc;
  |     ^^^^^^^^^^^

error[E0282]: type annotations needed
   --> src\commands\quiz_commands.rs:324:27
    |
324 |         for (index, q) in questions.iter().enumerate() {
    |                           ^^^^^^^^^ cannot infer type

error[E0282]: type annotations needed
   --> src\commands\quiz_commands.rs:337:17
    |
337 |                 obj.remove("id");
    |                 ^^^ cannot infer type

error[E0283]: type annotations needed
   --> src\commands\question_commands.rs:174:32
    |
174 |     let order_index: i64 = row.get("order_index") + 1; // Put it right after
    |                                ^^^ cannot infer type of the type parameter `T` declared on the method `get`
    |
    = note: cannot satisfy `_: sqlx::Decode<'_, sqlx::Sqlite>`
    = help: the following types implement trait `sqlx::Decode<'r, DB>`:
              `&'a str` implements `sqlx::Decode<'a, sqlx::Any>`
              `&'r JsonRawValue` implements `sqlx::Decode<'r, DB>`
              `&'r [u8]` implements `sqlx::Decode<'r, sqlx::Any>`
              `&'r [u8]` implements `sqlx::Decode<'r, sqlx::Sqlite>`
              `&'r str` implements `sqlx::Decode<'r, sqlx::Sqlite>`
              `Box<[u8]>` implements `sqlx::Decode<'_, sqlx::Sqlite>`
              `Box<str>` implements `sqlx::Decode<'_, sqlx::Sqlite>`
              `Cow<'r, str>` implements `sqlx::Decode<'r, sqlx::Sqlite>`
            and 46 others
note: required by a bound in `sqlx::Row::get`
   --> C:\Users\vuong\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sqlx-core-0.8.6\src\row.rs:71:12
    |
 68 |     fn get<'r, T, I>(&'r self, index: I) -> T
    |        --- required by a bound in this associated function
...
 71 |         T: Decode<'r, Self::Database> + Type<Self::Database>,
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Row::get`
help: consider specifying the generic arguments
    |
174 |     let order_index: i64 = row.get::<T, &str>("order_index") + 1; // Put it right after
    |                                   +++++++++++

error[E0283]: type annotations needed
   --> src\commands\question_commands.rs:174:32
    |
174 |     let order_index: i64 = row.get("order_index") + 1; // Put it right after
    |                                ^^^                - type must be known at this point
    |                                |
    |                                cannot infer type of the type parameter `T` declared on the method `get`
    |
    = note: multiple `impl`s satisfying `_: std::ops::Add<i32>` found in the following crates: `core`, `num_bigint`, `zune_jpeg`:
            - impl std::ops::Add for i32;
            - impl std::ops::Add<i32> for num_bigint::BigInt;
            - impl std::ops::Add<i32> for zune_jpeg::unsafe_utils_avx2::YmmRegister;
help: consider specifying the generic arguments
    |
174 |     let order_index: i64 = row.get::<T, &str>("order_index") + 1; // Put it right after
    |                                   +++++++++++

Some errors have detailed explanations: E0282, E0283, E0425.
For more information about an error, try `rustc --explain E0282`.
warning: `creator` (lib) generated 2 warnings
error: could not compile `creator` (lib) due to 5 previous errors; 2 warnings emitted
